Implement MethDef and MethodCall 1. **Initial Setup**    - Add MethDef node type    - Add methods field to StructDef
2. **Pretty Printer Implementation**
   - Refactor for uniform definition handling
   - Add MethDef support
   - Add MethodCall support
   - Fix formatting (removed trailing commas)

3. **Type Checking**
   - Implement MethDef type checking
   - Implement MethodCall type checking
   - Refactor MemberAccess type checking

4. **Code Generation (GenAsm)**
   - Fix bug in StackManager which falsley set
     writeOffset when stack was aligned
   - Update StackManager documentation
   - Implement MethDef generation
   - Implement MethodCall generation
   - Refactor GenC*-helpers:
     - Move signature getters
     - Extract C function signature generation
   - Add MethDef support in GenCHeaders