@@ -1,6 +1,5 @@
 package cc.crochethk.klang.ast;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -10,11 +9,20 @@ import utils.SourcePos;
 public class StructDef extends Node {
     public String name;
     public List<Parameter> fields;
+    public List<MethDef> methods;
+    // // public List<MethDef> autoMethods = new ArrayList<>();
+    // // public List<FunDef> autoFuns = new ArrayList<>();
 
-    public StructDef(SourcePos srcPos, String name, List<Parameter> fields) {
+    public StructDef(SourcePos srcPos, String name, List<Parameter> fields, List<MethDef> methDefs) {
         super(srcPos);
         this.name = name;
-        this.fields = fields != null ? fields : Collections.emptyList();
+        this.fields = fields != null ? fields : List.of();
+        this.methods = methDefs != null ? methDefs : List.of();
+    }
+
+    @Override
+    public boolean isEmpty() {
+        return fields.isEmpty() && methods.isEmpty();
     }
 
     @Override
@@ -25,12 +33,12 @@ public class StructDef extends Node {
     @Override
     public String toString() {
         return this.getClass().getSimpleName()
-                + "(name=" + name + ", fields=" + fields + ")";
+                + "(name=" + name + ", fields=" + fields + ", methods=" + methods + ")";
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(super.hashCode(), name, fields);
+        return Objects.hash(super.hashCode(), name, fields, methods);
     }
 
     @Override
@@ -41,6 +49,7 @@ public class StructDef extends Node {
         if (obj instanceof StructDef other) {
             return Objects.equals(name, other.name)
                     && Objects.equals(fields, other.fields)
+                    && Objects.equals(methods, other.methods)
                     && super.equals(other);
         }
         return false;
